# ip-killswitch

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: dev-server.js  gen-icons.mjs  sync-pubkey.mjs  tauri-cli.mjs
src/: App.tsx  api.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin.rs  commands.rs  config.rs  detector.rs  firewall.rs  lib.rs  logger.rs  main.rs  process_watcher.rs  processes.rs  scheduler.rs  state.rs  tray.rs  verdict.rs
src/components/: Dashboard.tsx  ExitConfirmDialog.tsx  KillConfirmDialog.tsx  LogsPanel.tsx  ProcessesPanel.tsx  ProvidersPanel.tsx  SchedulePanel.tsx  SettingsPanel.tsx  UpdateChecker.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  switch.tsx  tabs.tsx
src/lib/: utils.ts
