[package]
name = "ip-killswitch"
version = "1.0.0"
description = "Egress IP killswitch — watch the outbound IP and terminate configured processes when it leaves the allow-list"
authors = ["ItBayMax"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ip_killswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
regex = "1"
once_cell = "1"
url = "2"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
cron = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
